# codex

./: AGENTS.md
codex-rs/: Cargo.toml  README.md  config.md
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/core/src/: codex.rs  lib.rs  rollout.rs
codex-rs/docs/: server_mode.md
codex-rs/exec/: Cargo.toml
codex-rs/mcp-server/src/: codex_message_processor.rs  wire_format.rs
codex-rs/server/: Cargo.toml
codex-rs/server/src/: cli.rs  lib.rs
codex-rs/server/tests/: basic.rs
codex-rs/tui/src/: app.rs  app_backtrack.rs  app_event.rs  chatwidget.rs  cli.rs  history_cell.rs  lib.rs  session_log.rs  slash_command.rs
codex-rs/tui/src/bottom_pane/: chat_composer.rs  mod.rs  session_resume_popup.rs
codex-rs/tui/src/chatwidget/: tests.rs
docs/: syncing-custom-branch.md
